[gd_scene load_steps=12 format=2]

[ext_resource path="res://investigate/Suspect.tscn" type="PackedScene" id=1]
[ext_resource path="res://investigate/fonts/jetbrains_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://investigate/sfx/select.wav" type="AudioStream" id=3]
[ext_resource path="res://investigate/scripts/Core.gd" type="Script" id=4]
[ext_resource path="res://investigate/scenes/YoureFired.tscn" type="PackedScene" id=5]
[ext_resource path="res://investigate/scenes/Convicted.tscn" type="PackedScene" id=6]
[ext_resource path="res://investigate/ui/transparent_panel.tres" type="StyleBox" id=7]
[ext_resource path="res://investigate/scenes/Button.tscn" type="PackedScene" id=17]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.129412, 0.172549, 0.207843, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0470588, 0.219608, 0.321569, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxLine" id=2]
color = Color( 1, 1, 1, 1 )
grow_end = 0.0

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[node name="Investigate" type="Node2D"]
script = ExtResource( 4 )
button_template = ExtResource( 17 )
play_time = 60

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 0.132965
margin_top = -0.18399
margin_right = 320.133
margin_bottom = 179.816
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayArea" type="Control" parent="ColorRect"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 44.0
margin_top = -78.0
margin_right = -45.0
margin_bottom = -13.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Panel" parent="ColorRect/PlayArea"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HBoxContainer" parent="ColorRect/PlayArea/Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.210945
margin_bottom = 0.210945
size_flags_horizontal = 3
custom_constants/separation = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrisonerInfo" type="Panel" parent="ColorRect/PlayArea/Container/HSplitContainer"]
margin_right = 63.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
custom_styles/panel = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/PlayArea/Container/HSplitContainer/PrisonerInfo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/PlayArea/Container/HSplitContainer/PrisonerInfo/MarginContainer"]
margin_right = 53.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Crime" type="Label" parent="ColorRect/PlayArea/Container/HSplitContainer/PrisonerInfo/MarginContainer/VBoxContainer"]
margin_top = 12.0
margin_right = 53.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )
text = "???"

[node name="HSeparator" type="HSeparator" parent="ColorRect/PlayArea/Container/HSplitContainer/PrisonerInfo/MarginContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 53.0
margin_bottom = 25.0
custom_styles/separator = SubResource( 2 )

[node name="Likes" type="Label" parent="ColorRect/PlayArea/Container/HSplitContainer/PrisonerInfo/MarginContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 53.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.141176, 0.788235, 0.705882, 1 )
text = "???"

[node name="Dislikes" type="Label" parent="ColorRect/PlayArea/Container/HSplitContainer/PrisonerInfo/MarginContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 53.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.352941, 0, 1 )
text = "???"

[node name="Choices" type="Panel" parent="ColorRect/PlayArea/Container/HSplitContainer"]
margin_left = 65.0
margin_right = 191.0
margin_bottom = 65.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/PlayArea/Container/HSplitContainer/Choices"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesContainer" type="HBoxContainer" parent="ColorRect/PlayArea/Container/HSplitContainer/Choices/MarginContainer"]
margin_right = 116.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2

[node name="ProgressionLevels" type="Panel" parent="ColorRect/PlayArea/Container/HSplitContainer"]
margin_left = 193.0
margin_right = 231.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
custom_styles/panel = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/PlayArea/Container/HSplitContainer/ProgressionLevels"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/PlayArea/Container/HSplitContainer/ProgressionLevels/MarginContainer"]
margin_right = 28.0
margin_bottom = 55.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/PlayArea/Container/HSplitContainer/ProgressionLevels/MarginContainer/VBoxContainer"]
margin_right = 28.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Suspicion" type="Control" parent="ColorRect/PlayArea/Container/HSplitContainer/ProgressionLevels/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 8.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BG" type="ColorRect" parent="ColorRect/PlayArea/Container/HSplitContainer/ProgressionLevels/MarginContainer/VBoxContainer/HBoxContainer/Suspicion"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.34902, 0.701961, 0.176471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FG" type="ColorRect" parent="ColorRect/PlayArea/Container/HSplitContainer/ProgressionLevels/MarginContainer/VBoxContainer/HBoxContainer/Suspicion"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.658824, 0.905882, 0.533333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ColorRect/PlayArea/Container/HSplitContainer/ProgressionLevels/MarginContainer/VBoxContainer/HBoxContainer/Suspicion"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 55.0
margin_right = 48.0
margin_bottom = 8.0
rect_rotation = -90.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Suspicion"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anger" type="Control" parent="ColorRect/PlayArea/Container/HSplitContainer/ProgressionLevels/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 10.0
margin_right = 18.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BG" type="ColorRect" parent="ColorRect/PlayArea/Container/HSplitContainer/ProgressionLevels/MarginContainer/VBoxContainer/HBoxContainer/Anger"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.427451, 0.0392157, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FG" type="ColorRect" parent="ColorRect/PlayArea/Container/HSplitContainer/ProgressionLevels/MarginContainer/VBoxContainer/HBoxContainer/Anger"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.780392, 0.0627451, 0.0627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/PlayArea/Container/HSplitContainer/ProgressionLevels/MarginContainer/VBoxContainer/HBoxContainer/Anger"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 55.1124
margin_right = 48.0
margin_bottom = 8.1124
rect_rotation = -90.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Anger"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confession" type="Control" parent="ColorRect/PlayArea/Container/HSplitContainer/ProgressionLevels/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 28.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BG" type="ColorRect" parent="ColorRect/PlayArea/Container/HSplitContainer/ProgressionLevels/MarginContainer/VBoxContainer/HBoxContainer/Confession"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.2, 0.694118, 0.819608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FG" type="ColorRect" parent="ColorRect/PlayArea/Container/HSplitContainer/ProgressionLevels/MarginContainer/VBoxContainer/HBoxContainer/Confession"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.65098, 0.866667, 0.921569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ColorRect/PlayArea/Container/HSplitContainer/ProgressionLevels/MarginContainer/VBoxContainer/HBoxContainer/Confession"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 55.0
margin_right = 48.0
margin_bottom = 8.0
rect_rotation = -90.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Confession"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -27.0
margin_right = 28.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
text = "60"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Suspect" parent="." instance=ExtResource( 1 )]
position = Vector2( 160, 57.4712 )

[node name="Timer" type="Timer" parent="."]
wait_time = 90.0
one_shot = true

[node name="ClickEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="YoureFired" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Convicted" parent="." instance=ExtResource( 6 )]
visible = false
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
